--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -11,6 +11,9 @@
   margin-bottom: .5rem;
   font-size: 1rem;
 }
+.dk-message-area {
+  margin-bottom: .5rem;
+}
 .dk-mb-3 {
   margin-bottom: 1rem;
 }
