--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,13 +1,17 @@
-<form class="dk-form-logon">
+<form class="dk-form-logon" (ngSubmit)="logon()">
   <div class="text-center dk-mb-4">
     <!--<img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
     <h1 class="dk-form-title dk-mb-3 font-weight-normal">Logon Portal</h1>
   </div>
 
+  <div class="dk-message-area">
+    <dk-message></dk-message>
+  </div>
+
   <div class="dk-form-label-group">
-    <input type="email" id="inputEmail" name="inputEmail" #inputEmail class="form-control dk-form-control"
-           [(ngModel)]="user.email" placeholder="Email address" required="" autofocus="">
-    <label for="inputEmail">Email address</label>
+    <input type="email" id="inputUserID" name="inputUserID" #inputUserID class="form-control dk-form-control"
+           [(ngModel)]="user.userid" placeholder="Email address" required="" autofocus="">
+    <label for="inputUserID">Email address</label>
   </div>
 
   <div class="dk-form-label-group">
@@ -23,5 +27,4 @@
   </div>
   <button class="btn dk-btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
-  <p>{{user.email}}; {{user.password}}</p>
 </form>
