1. Logon waiting circle 2. Redis session store

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,30 +1,35 @@
 <form class="dk-form-logon" (ngSubmit)="logon()">
-  <div class="text-center dk-mb-4">
-    <!--<img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
-    <h1 class="dk-form-title dk-mb-3 font-weight-normal">Logon Portal</h1>
-  </div>
+  <fieldset [disabled]="isWaiting">
+    <div class="text-center dk-mb-4">
+      <!--<img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
+      <h1 class="dk-form-title dk-mb-3 font-weight-normal">Logon Portal</h1>
+    </div>
 
-  <div class="dk-message-area">
-    <dk-message></dk-message>
-  </div>
+    <div class="dk-message-area">
+      <dk-message></dk-message>
+    </div>
 
-  <div class="dk-form-label-group">
-    <input type="email" id="inputUserID" name="inputUserID" #inputUserID class="form-control dk-form-control"
-           [(ngModel)]="user.userid" placeholder="Email address" required="" autofocus="">
-    <label for="inputUserID">Email address</label>
-  </div>
+    <div class="dk-form-label-group">
+      <input type="email" id="inputUserID" name="inputUserID" #inputUserID class="form-control dk-form-control"
+             [(ngModel)]="user.userid" placeholder="Email address" required="" autofocus="">
+      <label for="inputUserID">Email address</label>
+    </div>
 
-  <div class="dk-form-label-group">
-    <input type="password" id="inputPassword" name="inputPassword" #inputPassword class="form-control dk-form-control"
-           [(ngModel)]="user.password" placeholder="Password" required="">
-    <label for="inputPassword">Password</label>
-  </div>
+    <div class="dk-form-label-group">
+      <input type="password" id="inputPassword" name="inputPassword" #inputPassword class="form-control dk-form-control"
+             [(ngModel)]="user.password" placeholder="Password" required="">
+      <label for="inputPassword">Password</label>
+    </div>
 
-  <div class="checkbox dk-mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-  </div>
-  <button class="btn dk-btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <!--"Remember me" is not necessary provided modern browsers have password saving features which are supposed more secure-->
+    <!--<div class="checkbox dk-mb-3">-->
+      <!--<label>-->
+        <!--<input type="checkbox" value="remember-me"> Remember me-->
+      <!--</label>-->
+    <!--</div>-->
 
+    <button class="btn dk-btn-lg btn-primary btn-block" type="submit">
+      <i *ngIf="isWaiting" class="fas fa-spinner fa-spin"></i> Sign in
+    </button>
+  </fieldset>
 </form>
