--- a/src/app/app_category/app-category-detail/app-category-detail-app/app-category-detail-app.component.css
+++ b/src/app/app_category/app-category-detail/app-category-detail-app/app-category-detail-app.component.css
@@ -8,11 +8,11 @@
   width: 20rem;
 }
 .dk-description{
-  width: 40rem;
-}
-.dk-icon{
-  width: 5rem;
+  width: 20rem;
 }
 .dk-number{
   width: 5rem;
+}
+.dk-actions{
+  width: 3rem;
 }
