--- a/src/app/app/app-list/app-list.component.html
+++ b/src/app/app/app-list/app-list.component.html
@@ -74,7 +74,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure to delete the user '{{toBeDeletedInstance}}'?</p>
+          <p>Are you sure to delete the app '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
           <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
