--- a/src/app/app_category/app-category-list/app-category-list.component.html
+++ b/src/app/app_category/app-category-list/app-category-list.component.html
@@ -68,7 +68,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure to delete the user '{{toBeDeletedInstance}}'?</p>
+          <p>Are you sure to delete the app category '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
           <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
