--- a/src/app/auth_object/auth-object-list/auth-object-list.component.html
+++ b/src/app/auth_object/auth-object-list/auth-object-list.component.html
@@ -66,7 +66,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure to delete the user '{{toBeDeletedInstance}}'?</p>
+          <p>Are you sure to delete the authorization object '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
           <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
