--- a/src/app/profile/profile-detail/profile-detail.component.html
+++ b/src/app/profile/profile-detail/profile-detail.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar dk-fixed-top navbar-light bg-light">
   <div>
-    <span class="font-weight-bold mb-0 mx-1">{{isNewMode? 'New App' : readonly? 'Display App' : 'Change App'}}</span>
+    <span class="font-weight-bold mb-0 mx-1">{{isNewMode? 'New Profile' : readonly? 'Display Profile' : 'Change Profile'}}</span>
   </div>
 
   <div class="flex-row-reverse">
@@ -21,13 +21,13 @@
 <div *ngIf="mainForm" class="ml-2">
   <div class="mt-2 ml-1 row">
     <dk-app-attribute-form2 class="col-md-6 col-lg-4"
-                            [attributeControl]="getAttrCtrlFromID('APP_ID')"
+                            [attributeControl]="getAttrCtrlFromID('PROFILE_NAME')"
                             [formGroup]="mainForm"
                             [readonly]="!isNewMode"
                             [isSmallSize] = "true">
     </dk-app-attribute-form2>
     <dk-app-attribute-form2 class="col-md-6 col-lg-4"
-                            [attributeControl]="getAttrCtrlFromID('NAME')"
+                            [attributeControl]="getAttrCtrlFromID('DESC')"
                             [formGroup]="mainForm"
                             [readonly]="readonly"
                             [isSmallSize] = "true">
@@ -36,23 +36,15 @@
 
   <ul class="nav nav-tabs mt-1">
     <li class="nav-item">
-      <a class="nav-link" [class.active]="tabStrip===1" href="javascript:void(0);" (click)="switchTabStrip(1)">Target</a>
+      <a class="nav-link" [class.active]="tabStrip===1" href="javascript:void(0);" (click)="switchTabStrip(1)">Authorization</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [class.active]="tabStrip===2" href="javascript:void(0);" (click)="switchTabStrip(2)">Authorization</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" [class.active]="tabStrip===3" href="javascript:void(0);" (click)="switchTabStrip(3)">Categories</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" [class.active]="tabStrip===4" href="javascript:void(0);" (click)="switchTabStrip(4)">Admin</a>
+      <a class="nav-link" [class.active]="tabStrip===3" href="javascript:void(0);" (click)="switchTabStrip(3)">Admin</a>
     </li>
   </ul>
 
   <div class="mt-2" [ngSwitch]="tabStrip">
-    <app-app-target *ngSwitchCase="1" [mainForm]="mainForm" [relationMetas]="relationMetas" [readonly]="readonly"></app-app-target>
-    <app-authorization *ngSwitchCase="2" [mainForm]="mainForm" [ctrlName]="'appAuthObjects'"  [readonly]="readonly"></app-authorization>
-    <app-app-categories *ngSwitchCase="3" [mainForm]="mainForm" [readonly]="readonly"></app-app-categories>
-    <app-admin-info *ngSwitchCase="4" [mainForm]="mainForm" [relationMetas]="relationMetas" [adminRelation]="'app'"></app-admin-info>
+    <app-authorization *ngSwitchCase="1" [mainForm]="mainForm" [ctrlName]="'authObjects'"  [readonly]="readonly"></app-authorization>
+    <app-admin-info *ngSwitchCase="3" [mainForm]="mainForm" [relationMetas]="relationMetas" [adminRelation]="'authProfile'"></app-admin-info>
   </div>
 </div>
