--- a/src/app/profile/profile-list/profile-list.component.html
+++ b/src/app/profile/profile-list/profile-list.component.html
@@ -1,13 +1,13 @@
 <div class="card mb-3 pt-3">
   <div class="mt-2 pl-4 row">
     <div class="col-6 form-group row">
-      <label for="permission_name" class="col-sm-3 col-form-label">Permission:</label>
-      <input id="permission_name" name="user_id" [(ngModel)]="permissionName" type="text"
+      <label for="profile_name" class="col-sm-3 col-form-label">Profile Name:</label>
+      <input id="profile_name" name="profile_name" [(ngModel)]="profileName" type="text"
              class="col-sm-6 form-control form-control-sm" (keyup)="enterSearch($event)" autofocus>
     </div>
     <div class="col-6 form-group row">
-      <label for="permission_desc" class="col-sm-3 col-form-label">Description:</label>
-      <input id="permission_desc" name="user_name" [(ngModel)]="permissionDesc" type="text"
+      <label for="profile_desc" class="col-sm-3 col-form-label">Description:</label>
+      <input id="profile_desc" name="profile_desc" [(ngModel)]="profileDesc" type="text"
              class="col-sm-6 form-control form-control-sm" (keyup)="enterSearch($event)">
     </div>
   </div>
@@ -28,8 +28,6 @@
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Description</th>
-      <th scope="col">Created By</th>
-      <th scope="col">Created At</th>
       <th scope="col">Changed By</th>
       <th scope="col">Changed At</th>
       <th scope="col">Action</th>
@@ -37,21 +35,19 @@
     </thead>
 
     <tbody>
-    <tr *ngFor="let permission of permissions">
-      <td><a [routerLink]="['/permissions', permission.NAME, {action: 'display'}]">{{permission.NAME}}</a></td>
-      <td>{{permission.DESCRIPTION}}</td>
-      <td>{{permission.CREATED_BY}}</td>
-      <td>{{permission.CREATE_TIME}}</td>
-      <td>{{permission.CHANGED_BY}}</td>
-      <td>{{permission.CHANGE_TIME}}</td>
+    <tr *ngFor="let authProfile of authProfiles">
+      <td><a [routerLink]="['/profiles', authProfile.PROFILE_NAME, {action: 'display'}]">{{authProfile.PROFILE_NAME}}</a></td>
+      <td>{{authProfile.DESC}}</td>
+      <td>{{authProfile.CHANGED_BY}}</td>
+      <td>{{authProfile.CHANGE_TIME}}</td>
       <td class="dk-actions">
-        <button title="Display" id="display" class="btn btn-sm" type="button" (click)="display(permission.NAME)">
+        <button title="Display" id="display" class="btn btn-sm" type="button" (click)="display(authProfile.PROFILE_NAME)">
           <span class="fas fa-search"></span>
         </button>
-        <button title="Change" id="change" class="btn btn-sm" type="button" (click)="change(permission.NAME)">
+        <button title="Change" id="change" class="btn btn-sm" type="button" (click)="change(authProfile.PROFILE_NAME)">
           <span class="fas fa-pen"></span>
         </button>
-        <button title="Delete" id="delete" class="btn btn-sm" type="button" (click)="delete(permission.NAME)">
+        <button title="Delete" id="delete" class="btn btn-sm" type="button" (click)="delete(authProfile.PROFILE_NAME)">
           <span class="far fa-trash-alt"></span>
         </button>
       </td>
@@ -70,7 +66,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure to delete the role '{{toBeDeletedInstance}}'?</p>
+          <p>Are you sure to delete the profile '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
           <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
@@ -81,4 +77,3 @@
   </div>
 
 </div>
-
