--- a/src/app/app_category/app-category-list/app-category-list.component.html
+++ b/src/app/app_category/app-category-list/app-category-list.component.html
@@ -71,8 +71,8 @@
           <p>Are you sure to delete the app category '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
-          <button type="button" id="confirm" class="btn btn-primary" (click)="confirmDeletion()">Confirm</button>
+          <button type="button" id="cancel" class="btn btn-sm btn-secondary" (click)="cancelDeletion()">Cancel</button>
+          <button type="button" id="confirm" class="btn btn-sm btn-primary" (click)="confirmDeletion()">Confirm</button>
         </div>
       </div>
     </div>
