--- a/src/app/permission/permission-detail/permission-detail-profile/permission-detail-profile.component.html
+++ b/src/app/permission/permission-detail/permission-detail-profile/permission-detail-profile.component.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="col-9">
-    <app-authorization [mainForm]="currentProfileFormGroup.get('profile')" [ctrlName]="'authorizations'"
+    <app-authorization [mainForm]="currentProfileFormGroup?.get('profile')" [ctrlName]="'authorizations'"
                        [readonly]="readonly"></app-authorization>
   </div>
 </div>
