--- a/src/app/permission/permission-detail/permission-detail.component.html
+++ b/src/app/permission/permission-detail/permission-detail.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar dk-fixed-top navbar-light bg-light">
   <div>
-    <span class="font-weight-bold mb-0 mx-1">{{isNewMode? 'New User' : readonly? 'Display Permission' : 'Change Permission'}}</span>
+    <span class="font-weight-bold mb-0 mx-1">{{isNewMode? 'New Permission' : readonly? 'Display Permission' : 'Change Permission'}}</span>
   </div>
 
   <div class="flex-row-reverse">
