--- a/src/app/permission/permission-list/permission-list.component.html
+++ b/src/app/permission/permission-list/permission-list.component.html
@@ -70,11 +70,11 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure to delete the role '{{toBeDeletedInstance}}'?</p>
+          <p>Are you sure to delete the permission '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
-          <button type="button" id="confirm" class="btn btn-primary" (click)="confirmDeletion()">Confirm</button>
+          <button type="button" id="cancel" class="btn btn-sm btn-secondary" (click)="cancelDeletion()">Cancel</button>
+          <button type="button" id="confirm" class="btn btn-sm btn-primary" (click)="confirmDeletion()">Confirm</button>
         </div>
       </div>
     </div>
