--- a/src/app/app/app-list/app-list.component.html
+++ b/src/app/app/app-list/app-list.component.html
@@ -63,7 +63,7 @@
     </tbody>
   </table>
 
-  <div class="modal fade" [class.show]="showDeletionConfirmation"
+  <div class="modal" [class.show]="showDeletionConfirmation"
        [ngStyle]="{'display': displayDeletionConfirmation}" id="deletionConfirmation" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -74,11 +74,11 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure to delete the app '{{toBeDeletedInstance}}'?</p>
+          <p>Are you sure to delete the App '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
-          <button type="button" id="confirm" class="btn btn-primary" (click)="confirmDeletion()">Confirm</button>
+          <button type="button" id="cancel" class="btn btn-sm btn-secondary" (click)="cancelDeletion()">Cancel</button>
+          <button type="button" id="confirm" class="btn btn-sm btn-primary" (click)="confirmDeletion()">Confirm</button>
         </div>
       </div>
     </div>
