--- a/src/app/profile/profile-list/profile-list.component.html
+++ b/src/app/profile/profile-list/profile-list.component.html
@@ -69,8 +69,8 @@
           <p>Are you sure to delete the profile '{{toBeDeletedInstance}}'?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" id="cancel" class="btn btn-secondary" (click)="cancelDeletion()">Cancel</button>
-          <button type="button" id="confirm" class="btn btn-primary" (click)="confirmDeletion()">Confirm</button>
+          <button type="button" id="cancel" class="btn btn-sm btn-secondary" (click)="cancelDeletion()">Cancel</button>
+          <button type="button" id="confirm" class="btn btn-sm btn-primary" (click)="confirmDeletion()">Confirm</button>
         </div>
       </div>
     </div>
