--- a/src/app/user/user-detail/user-email/user-email.component.html
+++ b/src/app/user/user-detail/user-email/user-email.component.html
@@ -17,9 +17,9 @@
                                 [readonly]="readonly"
                                 [isSmallSize]="true">
         </dk-app-attribute-form2>
-        <div class="col-1 row form-group mr-2">
-          <label for="primaryEmail" class="col-form-label col-form-label">Primary</label>
-          <input type="radio" class="form-control form-control-sm" id="primaryEmail" [value]="1" name="PRIMARY" formControlName="PRIMARY">
+        <div class="col-1 row form-group mr-2 form-check">
+          <input type="radio" class="form-check-input" id="primaryEmail" [value]="1" name="PRIMARY" formControlName="PRIMARY">
+          <label for="primaryEmail" class="form-check-label">Primary</label>
         </div>
       </div>
     </div>
