--- a/src/app/app_category/app-category-detail/app-category-detail.component.html
+++ b/src/app/app_category/app-category-detail/app-category-detail.component.html
@@ -23,8 +23,8 @@
   <dk-message></dk-message>
 </div>
 
-<div *ngIf="mainForm" class="mx-2">
-  <div class="mt-2 ml-1 row">
+<div *ngIf="mainForm">
+  <div class="mt-2 row">
     <dk-app-attribute-form2 class="col-md-4"
                             [attributeControl]="getAttrCtrlFromID('ID')"
                             [formGroup]="mainForm"
