--- a/src/app/profile/profile-list/profile-list.component.html
+++ b/src/app/profile/profile-list/profile-list.component.html
@@ -17,7 +17,8 @@
   </div>
 </div>
 
-<div class="mt-2 mb-4 mx-4">
+<div class="mt-2 mb-4
+">
   <dk-message></dk-message>
   <div class="btn-toolbar justify-content-end my-2" role="toolbar">
     <button type="button" id="new" class="btn btn-light btn-sm" (click)="new()">
