--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -22,8 +22,8 @@
   <dk-message></dk-message>
 </div>
 
-<div *ngIf="userForm" class="ml-2">
-  <div class="mt-2 ml-1 row">
+<div *ngIf="userForm">
+  <div class="mt-2 row">
     <dk-app-attribute-form2 class="col-md-6 col-lg-4"
                             [attributeControl]="getAttrCtrlFromID('USER_ID')"
                             [formGroup]="userForm"
